Back-end/src/main/java/com/example/error/UniqueConstraintViolation.java
package com.example.error;

public class UniqueConstraintViolation extends RuntimeException {

    public UniqueConstraintViolation(String message) {
        super(message);
    }

}